SUBDIRS = correlation \
		  extract_nessus \
		  extract_osvdb

scriptsdir   = $(datadir)/ossim/scripts
scripts_SCRIPTS = chkconfig.pl \
				  connect_ossim_db.sh \
				  create_sidmap.pl \
			      get_date.pl \
				  get_osvdb.pl \
				  get_rrd_value.pl \
				  rrd_plugin.pl \
	              services.pl \
				  check_makefile.sh \
				parse_cisco_facilities.pl \
				testShellcode.py \
				sophos.py \
				mysql2csv \
				intrushield_update.py \
				create_sidmap_preprocessors.pl \
				console_alarms.py \
				check_vars.pl 

DISTCLEANFILES = Makefile.in


