basedir = $(datadir)/ossim/contrib/base
base_DATA = base.1.0.2.diff \
	base.1.0.diff \
	base.1.1.diff \
	base.1.1.2.diff \
	base.1.2.2.diff \
	base.1.2.5.diff \
	base.1.2.6.diff \
	base.1.2.7.diff \
	base.1.1.4.sensor_resolv_sort.diff \
	base.1.2.5.sensor_resolv_sort.diff \
	base.spec
EXTRA_DIST = $(base_DATA)

DISTCLEANFILES = Makefile.in
