fontsdir   = $(datadir)/ossim/fonts
fonts_DATA = COPYRIGHT.TXT \
	local.conf \
	README.TXT \
	RELEASENOTES.TXT \
	VeraBd.ttf \
	VeraBI.ttf \
	VeraIt.ttf \
	VeraMoBd.ttf \
	VeraMoBI.ttf \
	VeraMoIt.ttf \
	VeraMono.ttf \
	VeraSeBd.ttf \
	VeraSe.ttf \
	Vera.ttf
 
EXTRA_DIST   = $(fonts_DATA)
DISTCLEANFILES = Makefile.in
