dbdir   = $(datadir)/ossim/db
db_DATA =  00-create_datawarehouse_tbls_mysql.sql \
		00-create_alienvault_siem_tbls_mysql.sql \
		01-create_alienvault_data_config.sql	\
		02-create_alienvault_data_data.sql \
		00-create_alienvault_tbls_mysql.sql \
		03-create_alienvault_data_croscor_snort_nessus.sql	

EXTRA_DIST   = $(db_DATA)

DISTCLEANFILES = Makefile.in
