incidentsdir = $(datadir)/ossim/www/incidents
incidents_DATA = attachment.php \
	deleteincidenttype.php \
	incident.php \
	incidenttag.php \
	incidenttype.php \
	index.php \
	modifyincidenttypeform.php \
	modifyincidenttype.php \
	newincident.php \
	newincidenttypeform.php \
	manageincident.php

EXTRA_DIST   = $(incidents_DATA)

DISTCLEANFILES = Makefile.in
