pluginsdbdir   = $(datadir)/ossim/db/plugins
pluginsdb_DATA = 	apache.sql \
					arpwatch.sql \
					cisco-ids.sql \
					cisco-pix.sql \
					cisco-router.sql \
					gfi.sql \
					heartbeat.sql \
					iis.sql \
					iptables.sql \
					nagios.sql \
					netgear.sql \
					netscreen-firewall.sql \
					netscreen-manager.sql \
					nmap-monitor.sql \
					ntop-monitor.sql \
					ntsyslog.sql \
					opennms-monitor.sql \
					osiris.sql \
					ossim-directive.sql \
					ossim-monitor.sql \
					ossim-os.sql \
					ossim-services.sql \
					ossim-threshold.sql \
					osvdb.sql \
					p0f.sql \
					pads.sql \
					pam_unix.sql \
					postfix.sql \
					realsecure.sql \
					reserved.sql \
					rrd.sql \
					snarewindows.sql \
					snort.sql \
					spamassassin.sql \
					ssh.sql \
					sudo.sql \
					tcptrack-monitor.sql \
					README

EXTRA_DIST   = $(pluginsdb_DATA)

DISTCLEANFILES = Makefile.in
