imagesdir = $(datadir)/ossim/www/java/images
images_DATA = blank.jpg \
	cone.jpg \
	host0.jpg \
	host1.jpg \
	host2.jpg \
	host3.jpg \
	host4.jpg \
	host5.jpg \
	host6.jpg \
	host.jpg \
	icmppacket.jpg \
	link.jpg \
	otherpacket.jpg \
	packet.jpg \
	port.jpg \
	tcppacket.jpg \
	udppacket.jpg

EXTRA_DIST = $(images_DATA)

DISTCLEANFILES = Makefile.in
